Trello #449 Discourse tweaks - topic page - fix line alignment in topic-map (easier done by forking the template and going back to old layout with H4s on top rather than updating the CSS)
- and since we forked the template, let's also switch the Views, Likes and Users headings to icons, like on the topic list page

--- a/assets/stylesheets/desktop/topic-post.scss
+++ b/assets/stylesheets/desktop/topic-post.scss
@@ -162,10 +162,9 @@ nav.post-controls {
       padding: 15px 15px;
     }
 
-    a,
-    .number {
-      color: $primary;
-      font-weight: normal;
+    // SP custom rule
+    i {
+      color: $gray-sitepoint-header-SP; // since we have icons rather then texts in headings (similar to topic list table)
     }
   }
 
